--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <button class="search-submit" type="submit">Найти</button>
         </form>
 
-        <ul class="navigation-list navigation-user">
+        <menu class="navigation-list navigation-user">
           <li class="navigation-item">
             <a class="navigation-link icon-in" href="#">Войти</a>
           </li>
@@ -44,9 +44,9 @@
               Корзина
             </a>
           </li>
-        </ul>
+        </menu>
 
-        <ul class="navigation-list">
+        <menu class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Доставка</a>
           </li>
@@ -56,7 +56,7 @@
           <li class="navigation-item">
             <a class="navigation-link" href="#"> Контакты </a>
           </li>
-        </ul>
+        </menu>
 
         <div class="navigation-catalog">
           <p class="navigation-catalog-group">
