--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Device - магазин электроники</title>
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header class="page-header">
       <nav class="navigation">
-        <img class="logo" src="#" alt="Логотип - Device" />
+        <img
+          class="logo"
+          src="images-content/logo/logo-black.svg"
+          width="145"
+          height="36"
+          alt="Логотип - Device - магазин электроники"
+        />
 
         <form
           class="search"
