add base styled all pages

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </header>
 
     <main class="page-index">
-      <h1>Device - магазин электроники</h1>
+      <h1 class="visually-hidden">Device - магазин электроники</h1>
 
       <section class="gallery">
         <h2 class="visually-hidden">Галерея</h2>
@@ -124,19 +124,21 @@
               alt=""
             />
 
-            <h3 class="product-title">Порхает как бабочка, жалит как пчела!</h3>
-
-            <p class="product-lid">
-              Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
-              лазером, замаскированным под стандартную камеру.
-            </p>
-
             <button class="slider-button slider-prev">
               <span class="visually-hidden">Предыдущее фото</span>
             </button>
             <button class="slider-button slider-next">
               <span class="visually-hidden">Следующее фото</span>
             </button>
+
+            <h3 class="product-title title">
+              Порхает как бабочка, жалит как пчела!
+            </h3>
+
+            <p class="product-lid text">
+              Этот обычный, на первый взгляд, квадрокоптер оснащен мощным
+              лазером, замаскированным под стандартную камеру.
+            </p>
 
             <a class="link" href="#">Подробнее</a>
 
@@ -290,7 +292,7 @@
         <h2 class="visually-hidden">Популярные разделы</h2>
 
         <ul class="sections-list">
-          <li class="sections-item section">
+          <li class="section-item">
             <a class="section-link" href="#">
               <img
                 class="section-photo"
@@ -302,7 +304,7 @@
               <h3 class="section-title">Виртуальная реальность</h3>
             </a>
           </li>
-          <li class="sections-item section">
+          <li class="section-item">
             <a class="section-link" href="#">
               <img
                 class="section-photo"
@@ -314,7 +316,7 @@
               <h3 class="section-title">Моноподы для селфи</h3>
             </a>
           </li>
-          <li class="sections-item section">
+          <li class="section-item">
             <a class="section-link" href="#">
               <img
                 class="section-photo"
@@ -326,7 +328,7 @@
               <h3 class="section-title">Экшн-камеры</h3>
             </a>
           </li>
-          <li class="sections-item section">
+          <li class="section-item">
             <a class="section-link" href="#">
               <img
                 class="section-photo"
@@ -338,7 +340,7 @@
               <h3 class="section-title">Фитнес-браслеты</h3>
             </a>
           </li>
-          <li class="sections-item section">
+          <li class="section-item">
             <a class="section-link" href="#">
               <img
                 class="section-photo"
@@ -350,7 +352,7 @@
               <h3 class="section-title">Умные часы</h3>
             </a>
           </li>
-          <li class="sections-item section">
+          <li class="section-item">
             <a class="section-link" href="#">
               <img
                 class="section-photo"
@@ -366,7 +368,7 @@
       </section>
 
       <section class="services services-tabs">
-        <h2 class="visually-hidden services-title">Сервисы</h2>
+        <h2 class="visually-hidden">Сервисы</h2>
 
         <ol class="services-advantages">
           <li
@@ -439,8 +441,8 @@
           tabindex="0"
           aria-labelledby="services-tab-1"
         >
-          <h3 class="delivery-title">Доставка</h3>
-          <p class="delivery-description">
+          <h3 class="delivery-title title">Доставка</h3>
+          <p class="delivery-description text">
             Мы с удовольствием доставим ваш товар прямо к вашему подъезду
             совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на
             ваш этаж.
@@ -453,7 +455,7 @@
           tabindex="0"
           aria-labelledby="services-tab-2"
         >
-          <h3 class="guarantee-title">Доставка</h3>
+          <h3 class="guarantee-title">Гарантия</h3>
           <p class="guarantee-description">
             Если из-за возгорания купленного у нас товара у вас сгорит дом — не
             переживайте, мы выдадим вам новый. Товар, не дом, конечно же.
@@ -466,39 +468,13 @@
           tabindex="0"
           aria-labelledby="services-tab-3"
         >
-          <h3 class="credit-title">Доставка</h3>
+          <h3 class="credit-title">Кредит</h3>
           <p class="credit-description">
             Залезть в долговую яму стало проще! Кредитные консультанты подберут
             для вас наиболее выгодные условия кредита. Выгодные для банка,
             разумеется.
           </p>
         </section>
-
-        <ol class="services-list">
-          <li class="services-item item-delivery item-current">
-            <h3 class="services-title">Доставка</h3>
-            <p class="services-description">
-              Мы с удовольствием доставим ваш товар прямо к вашему подъезду
-              совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на
-              ваш этаж.
-            </p>
-          </li>
-          <li class="services-item item-guarantee">
-            <h3 class="services-title">Доставка</h3>
-            <p class="services-description">
-              Если из-за возгорания купленного у нас товара у вас сгорит дом —
-              не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.
-            </p>
-          </li>
-          <li class="services-item item-credit">
-            <h3 class="services-title">Доставка</h3>
-            <p class="services-description">
-              Залезть в долговую яму стало проще! Кредитные консультанты
-              подберут для вас наиболее выгодные условия кредита. Выгодные для
-              банка, разумеется.
-            </p>
-          </li>
-        </ol>
       </section>
 
       <section class="about">
@@ -526,9 +502,9 @@
           проверить работоспособность покупки.
         </p>
 
-        <h3 class="contacts-subtitle">Интернет-магазин «Девайс»</h3>
+        <h3 class="contacts-subtitle subtitle">Интернет-магазин «Девайс»</h3>
         <address class="contacts-address">
-          <p class="contacts-text">
+          <p class="contacts-text text">
             Санкт-Петербург, набережная реки Карповки, 5, литера П.
           </p>
           <a class="contacts-phone" href="tel:+78128121212"
@@ -536,7 +512,7 @@
           >
         </address>
 
-        <h3 class="contacts-subtitle">Время работы</h3>
+        <h3 class="contacts-subtitle subtitle">Время работы</h3>
         <ul class="contacts-schedule">
           <li class="contacts-schedule-item">пн—пт: с 10:00 до 22:00</li>
           <li class="contacts-schedule-item">сб—вс: с 10:00 до 19:00</li>
@@ -567,10 +543,26 @@
               name="newsletter-email"
             />
           </p>
-          <button class="newsletter-button" type="submit">Подписаться</button>
+          <button class="newsletter-button link" type="submit">
+            Подписаться
+          </button>
         </form>
 
-        <p class="free">Это бесплатно</p>
+        <div class="newsletter-container">
+          <svg
+            width="15"
+            height="14"
+            viewBox="0 0 15 14"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M14.498 0L4.89805 9.3L0.498047 5V9.7L4.99805 14L14.498 4.7V0Z"
+              fill="#08AF00"
+            />
+          </svg>
+          <p class="free text">Это бесплатно</p>
+        </div>
       </section>
     </main>
 
@@ -591,7 +583,7 @@
 
       <section class="footer-services">
         <h2 class="visually-hidden">Сервисы</h2>
-        <ul class="footer-services-list">
+        <ul class="footer-services-list navigation-list">
           <li class="footer-services-item">
             <a class="footer-services-link" href="#">Доставка</a>
           </li>
@@ -643,7 +635,6 @@
                   fill="#444444"
                 />
               </svg>
-
               <span class="visually-hidden">Инстаграм</span>
             </a>
           </li>
