--- a/index.html
+++ b/index.html
@@ -388,41 +388,17 @@
       <section class="services services-tabs">
         <h2 class="visually-hidden">Сервисы</h2>
 
-        <!-- Экстра сервис -->
-        <ol class="extra-service">
-          <li
-            class="extra-service-item extra-service-item-icon-delivery extra-service-item-current"
-          >
-            <a class="extra-service-link" href="#"
-              >Доставка редкого товара по заказ</a
-            >
-          </li>
-          <li class="extra-service-item extra-service-item-icon-guarantee">
-            <a class="extra-service-link" href="#"
-              >Расширенная 10 летняя гарантии только у нас</a
-            >
-          </li>
-          <li class="extra-service-item extra-service-item-icon-credit">
-            <a class="extra-service-link" href="#"
-              >Персональные предложение по кредиту и только очень выгодных
-              условиях</a
-            >
-          </li>
-        </ol>
-
         <!-- Аккордеон -->
-        <p
-          class="services-tablist"
-          role="tablist"
-          aria-labelledby="services-title"
-        >
+        <p class="services-tablist" role="tablist">
+          <!--  -->
           <button
             class="services-tab link link-dark"
             role="tab"
             type="button"
             id="services-tab-1"
             aria-selected="true"
-            aria-controls="tabpanel-1"
+            aria-controls="services-tabpanel-1 extra-service-item-1"
+            aria-labelledby="services-tabpanel-1 extra-service-item-1"
           >
             Доставка
           </button>
@@ -432,8 +408,9 @@
             type="button"
             id="services-tab-2"
             aria-selected="false"
-            aria-controls="tabpanel-2"
+            aria-controls="services-tabpanel-2 extra-service-item-2"
             tabindex="-1"
+            aria-labelledby="services-tabpanel-2 extra-service-item-2"
           >
             Гарантия
           </button>
@@ -443,8 +420,9 @@
             type="button"
             id="services-tab-3"
             aria-selected="false"
-            aria-controls="tabpanel-3"
+            aria-controls="services-tabpanel-3 extra-service-item-3"
             tabindex="-1"
+            aria-labelledby="services-tabpanel-3 extra-service-item-3"
           >
             Кредит
           </button>
@@ -493,6 +471,161 @@
             разумеется.
           </p>
         </section>
+
+        <!-- Экстра сервис -->
+        <ol class="extra-service">
+          <li
+            class="extra-service-item extra-service-item-current"
+            id="extra-service-item-1"
+          >
+            <span class="extra-service-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="47"
+                height="32"
+                fill="currentColor"
+              >
+                <g fill="currentColor" clip-path="url(#prefix__a)">
+                  <path
+                    d="M46.7 15.757l-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3v-5.1c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h26.2v21.7H15.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5v-16.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1zm-35.4 12.6c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8z"
+                  />
+                  <path
+                    d="M19.4 9.957c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H4.8c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.6zm-1.7 5.1c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5z"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="prefix__a">
+                    <path fill="currentColor" d="M0 .357h47v31H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </span>
+            <span class="extra-service-text"
+              >Доставка редкого товара по заказ</span
+            >
+            <button class="extra-service-button" type="button">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="4"
+                height="13"
+                fill="currentColor"
+              >
+                <g fill="currentColor" clip-path="url(#a)">
+                  <path d="M3 .357H1v2h2v-2ZM3 4.357H1v8h2v-8Z" />
+                </g>
+                <defs>
+                  <clipPath id="a">
+                    <path fill="currentColor" d="M0 .357h4v12H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+              <span class="visually-hidden"
+                >Посмотреть дополнительную информацию</span
+              >
+            </button>
+          </li>
+          <li
+            class="extra-service-item extra-service-item-icon-guarantee"
+            id="extra-service-item-2"
+          >
+            <span class="extra-service-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="47"
+                height="32"
+                fill="currentColor"
+              >
+                <g fill="currentColor" clip-path="url(#prefix__c)">
+                  <path
+                    d="M46.7 15.757l-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3v-5.1c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h26.2v21.7H15.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5v-16.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1zm-35.4 12.6c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8z"
+                  />
+                  <path
+                    d="M19.4 9.957c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H4.8c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.6zm-1.7 5.1c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5z"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="prefix__c">
+                    <path fill="currentColor" d="M0 .357h47v31H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </span>
+            <span class="extra-service-text"
+              >Расширенная 10 летняя гарантии только у нас</span
+            >
+            <button class="extra-service-button" type="button">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="4"
+                height="13"
+                fill="currentColor"
+              >
+                <g fill="currentColor" clip-path="url(#b)">
+                  <path d="M3 .357H1v2h2v-2ZM3 4.357H1v8h2v-8Z" />
+                </g>
+                <defs>
+                  <clipPath id="b">
+                    <path fill="currentColor" d="M0 .357h4v12H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+              <span class="visually-hidden"
+                >Посмотреть дополнительную информацию</span
+              >
+            </button>
+          </li>
+          <li
+            class="extra-service-item extra-service-item-icon-credit"
+            id="extra-service-item-3"
+          >
+            <span class="extra-service-icon">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="47"
+                height="32"
+                fill="currentColor"
+              >
+                <g fill="currentColor" clip-path="url(#prefix__b)">
+                  <path
+                    d="M46.7 15.757l-6.5-8.2c-.3-.4-.7-.6-1.2-.6h-8.3v-5.1c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h26.2v21.7H15.8c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.2 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h13.4c.8 0 1.5-.7 1.5-1.5v-16.6h7.6l5.7 7.3v7.9h-2.2c-.6-1.9-2.4-3.3-4.5-3.3-2.6 0-4.8 2.2-4.8 4.8 0 2.6 2.1 4.8 4.8 4.8 2.1 0 3.9-1.4 4.5-3.3h3.7c.8 0 1.5-.7 1.5-1.5v-9.9c0-.4-.1-.7-.3-1zm-35.4 12.6c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8zm26.1 0c-1 0-1.8-.8-1.8-1.8s.8-1.8 1.8-1.8 1.8.8 1.8 1.8-.9 1.8-1.8 1.8z"
+                  />
+                  <path
+                    d="M19.4 9.957c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5H4.8c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.6zm-1.7 5.1c0-.8-.7-1.5-1.5-1.5H1.5c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h14.7c.8 0 1.5-.7 1.5-1.5z"
+                  />
+                </g>
+                <defs>
+                  <clipPath id="prefix__b">
+                    <path fill="currentColor" d="M0 .357h47v31H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+            </span>
+            <span class="extra-service-text"
+              >Персональные предложение по кредиту и только очень выгодных
+              условиях</span
+            >
+            <button class="extra-service-button" type="button">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="4"
+                height="13"
+                fill="currentColor"
+              >
+                <g fill="currentColor" clip-path="url(#c)">
+                  <path d="M3 .357H1v2h2v-2ZM3 4.357H1v8h2v-8Z" />
+                </g>
+                <defs>
+                  <clipPath id="c">
+                    <path fill="currentColor" d="M0 .357h4v12H0z" />
+                  </clipPath>
+                </defs>
+              </svg>
+              <span class="visually-hidden"
+                >Посмотреть дополнительную информацию</span
+              >
+            </button>
+          </li>
+        </ol>
       </section>
 
       <!-- О нас -->
